# RS2

grants_testing_space/: hello.txt
motion/src/motion/: CMakeLists.txt  package.xml
motion/src/motion/launch/: motion.launch.py
motion/src/motion/src/: readme.txt  testmain.cpp  testmovement.cpp  testmovement.h
motion/src/motion/src/hello_moveit/: package.xml
motion/src/motion/src/install/: setup.bash  setup.ps1  setup.zsh
motion/src/motion/src/install/hello_moveit/share/hello_moveit/: local_setup.sh
motion/src/motion/src/install/ros_tcp_endpoint/share/ros_tcp_endpoint/: package.sh
motion/testmotion/: CMakeLists.txt  package.xml
motion/testmotion/src/: readme.txt  testmovement.cpp  testmovement.h
motion/testmotion/src/install/: local_setup.sh  setup.sh
motion/testmotion/src/install/hello_moveit/lib/hello_moveit/: hello_moveit
motion/testmotion/src/install/hello_moveit/share/ament_index/resource_index/parent_prefix_path/: hello_moveit
motion/testmotion/src/install/hello_moveit/share/hello_moveit/: package.sh
motion/testmotion/src/log/: latest_build
